buildscript {
    repositories {
        mavenCentral()
        maven { url = "https://maven.minecraftforge.net" }
        maven { url = "https://maven.anatawa12.com/releases" }
    }
    dependencies {
        classpath("com.anatawa12.forge:ForgeGradle:2.3-1.0.+") {
            changing = true
        }
    }
}

apply plugin: 'net.minecraftforge.gradle.forge'

version = "1.0.0"
group = "com.kintil.doommod"
archivesBaseName = "canitrundoom"

sourceCompatibility = targetCompatibility = '1.8'
compileJava {
    sourceCompatibility = targetCompatibility = '1.8'
}

minecraft {
    version = "1.12.2-14.23.5.2847"
    runDir = "run"
    mappings = "stable_39"
}

repositories {
    // Local file-based Maven repo — contains forge userdev bundled in this project
    maven { url = uri("${rootDir}/libs") }
    mavenCentral()
    maven { url = "https://maven.minecraftforge.net" }
}

dependencies {
    // no extra dependencies needed
}

jar {
    manifest {
        attributes([
            "Specification-Title": "canitrundoom",
            "Specification-Vendor": "kintil555",
            "Specification-Version": "1",
            "Implementation-Title": project.name,
            "Implementation-Version": "${version}",
            "Implementation-Vendor" : "kintil555",
        ])
    }
}

processResources {
    inputs.property "version", project.version
    inputs.property "mcversion", project.minecraft.version

    from(sourceSets.main.resources.srcDirs) {
        include 'mcmod.info'
        expand 'version': project.version, 'mcversion': project.minecraft.version
    }
    from(sourceSets.main.resources.srcDirs) {
        exclude 'mcmod.info'
    }
}
